# na_seq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  release.yml
python/: Cargo.toml  PYPI_README.md  pyproject.toml
python/src/: amino_acids.rs  element.rs  lib.rs  nucleotide.rs
src/: amino_acids.rs  element.rs  lib.rs  ligation.rs  nucleotide.rs  re_lib.rs  restriction_enzyme.rs
