[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "na_seq"
description = "DNA, RNA, and amino acid sequence types and functions"
requires-python = ">=3.10"
authors = [{ name = "David O'Connor", email = "the_alchemist@fastmail.com" }]
readme = "PYPI_README.md"
license = { file = "PYPI_LICENSE" }
dynamic = ["version"]

classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Biology",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/David-OConnor/na_seq"
repository = "https://github.com/David-OConnor/na_seq"
documentation = "https://docs.rs/na_seq"


[tool.maturin]
# Using ABI3 allows for this to work on any Python version > 3.10; not just 3.10.
features = ["pyo3/extension-module", "pyo3/abi3-py310"]